# MOTU

./: Battleplan.h  CImgScanner.h  CMakeLists.txt  Campaign.h  DB.h  Pomofocus.h  README.md  Stats.h  Testing.h  main.cpp
DBs/: mainDB.db
DBs/Campaigns/: TEST.db
Pics/: Arrowdown.xcf  Arrowup.xcf  Frame.xcf
